--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,10 +31,10 @@ dependencies {
     testImplementation 'junit:junit:4.12'
 
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
-    implementation 'com.android.support:support-v4:26.+'
-    implementation 'com.android.support:design:26.+'
-    implementation 'com.android.support:recyclerview-v7:26.+'
-    implementation 'com.android.support:cardview-v7:26.+'
+    implementation 'com.android.support:support-v4:26.0.0-beta2'
+    implementation 'com.android.support:design:26.0.0-beta2'
+    implementation 'com.android.support:recyclerview-v7:26.0.0-beta2'
+    implementation 'com.android.support:cardview-v7:26.0.0-beta2'
 
     compile "android.arch.lifecycle:runtime:1.0.0-alpha1"
     compile "android.arch.lifecycle:extensions:1.0.0-alpha1"
