--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,12 +4,12 @@ apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 
 android {
-    compileSdkVersion 'android-O'
+    compileSdkVersion 26
     buildToolsVersion "25.0.3"
     defaultConfig {
         applicationId "com.metallic.worldtime"
         minSdkVersion 21
-        targetSdkVersion 'O'
+        targetSdkVersion 26
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
@@ -36,11 +36,11 @@ dependencies {
     implementation 'com.android.support:recyclerview-v7:26.0.0-beta2'
     implementation 'com.android.support:cardview-v7:26.0.0-beta2'
 
-    compile "android.arch.lifecycle:runtime:1.0.0-alpha1"
-    compile "android.arch.lifecycle:extensions:1.0.0-alpha1"
-    compile "android.arch.persistence.room:runtime:1.0.0-alpha1"
-    kapt "android.arch.persistence.room:compiler:1.0.0-alpha1"
-    annotationProcessor "android.arch.persistence.room:compiler:1.0.0-alpha1"
+    compile "android.arch.lifecycle:runtime:1.0.0-alpha2"
+    compile "android.arch.lifecycle:extensions:1.0.0-alpha2"
+    compile "android.arch.persistence.room:runtime:1.0.0-alpha2"
+    kapt "android.arch.persistence.room:compiler:1.0.0-alpha2"
+    annotationProcessor "android.arch.persistence.room:compiler:1.0.0-alpha2"
 
     compile 'net.danlew:android.joda:2.9.9'
 }
