--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,16 +31,16 @@ dependencies {
     testImplementation 'junit:junit:4.12'
 
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
-    implementation 'com.android.support:support-v4:26.0.0-beta2'
-    implementation 'com.android.support:design:26.0.0-beta2'
-    implementation 'com.android.support:recyclerview-v7:26.0.0-beta2'
-    implementation 'com.android.support:cardview-v7:26.0.0-beta2'
+    implementation 'com.android.support:support-v4:26.0.1'
+    implementation 'com.android.support:design:26.0.1'
+    implementation 'com.android.support:recyclerview-v7:26.0.1'
+    implementation 'com.android.support:cardview-v7:26.0.1'
 
-    compile "android.arch.lifecycle:runtime:1.0.0-alpha2"
-    compile "android.arch.lifecycle:extensions:1.0.0-alpha2"
-    compile "android.arch.persistence.room:runtime:1.0.0-alpha2"
-    kapt "android.arch.persistence.room:compiler:1.0.0-alpha2"
-    annotationProcessor "android.arch.persistence.room:compiler:1.0.0-alpha2"
+    compile "android.arch.lifecycle:runtime:1.0.0-alpha8"
+    compile "android.arch.lifecycle:extensions:1.0.0-alpha8"
+    compile "android.arch.persistence.room:runtime:1.0.0-alpha8"
+    kapt "android.arch.persistence.room:compiler:1.0.0-alpha8"
+    annotationProcessor "android.arch.persistence.room:compiler:1.0.0-alpha8"
 
     compile 'net.danlew:android.joda:2.9.9'
 }
